# behave-blog-demo

./: Cargo.toml  LICENSE.txt  README.md  build-dev.sh  build.sh  rustfmt.toml
src/: agent.rs  behaviour.rs  coins.rs  fruit.rs  glue.rs  grid.rs  hunger.rs  lib.rs  points.rs  resizing.rs  schedule.rs
src/behaviours/: eating.rs  hunger_based.rs  mod.rs  move_to_closest_fruit.rs  pickups.rs  target_finding.rs  walk_clockwise.rs  walk_left_right.rs  walk_left_right_naive.rs  walking.rs
