[package]
name = "behave_blog_demo"
version = "0.1.0"
edition = "2024"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[lib]
crate-type = ["cdylib", "rlib"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#compiling-for-size-instead-of-speed
[profile.release]
opt-level = 'z'
# https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#link-time-optimization-lto
lto = true
codegen-units = 1

[dependencies]
bevy = "0.15.3"
wasm-bindgen = "0.2.100"
