[package]
name = "behave_blog_demo"
version = "0.1.0"
edition = "2024"
description = "A demo of Bevy's behavior tree system"
repository = "https://github.com/HanKruiger/behave-blog-demo"
license = "MIT"

[lib]
crate-type = ["cdylib"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# from bevy's Cargo.toml
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
  "default_no_std",
  "web",

  "bevy_ui",
  "bevy_winit",
  "webgl2",
] }

wasm-bindgen = { version = "0.2.100", default-features = false }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "EventTarget",
  "console",
] }
gloo = { version = "0.11" }
crossbeam-channel = { version = "0.5", default-features = false }
